// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div>
  <div
    class="App"
  >
    <header
      class="App-header"
    >
      <h1 />
      <img
        alt="logo"
        class="App-logo"
        src="logo.svg"
      />
      <a
        class="App-link"
        href="https://reactjs.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn React
      </a>
    </header>
  </div>
</div>
`;

exports[`when component has an error shows the error 1`] = `
<div>
  <div
    class="App"
  >
    <header
      class="App-header"
    >
      <h1 />
      <img
        alt="logo"
        class="App-logo"
        src="logo.svg"
      />
      <p>
        Edit 
        <code>
          src/App.js
        </code>
         and save to reload.
      </p>
      <a
        class="App-link"
        href="https://reactjs.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn React
      </a>
    </header>
  </div>
</div>
`;

exports[`when component has children shows the children 1`] = `
<div>
  <div
    class="App"
  >
    <header
      class="App-header"
    >
      <h1 />
      <img
        alt="logo"
        class="App-logo"
        src="logo.svg"
      />
      <a
        class="App-link"
        href="https://reactjs.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn React
      </a>
    </header>
    <p>
      Hello children
    </p>
  </div>
</div>
`;

exports[`when component is provided a title has the correct title rendered 1`] = `
<div>
  <div
    class="App"
  >
    <header
      class="App-header"
    >
      <h1>
        hello world
      </h1>
      <img
        alt="logo"
        class="App-logo"
        src="logo.svg"
      />
      <a
        class="App-link"
        href="https://reactjs.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn React
      </a>
    </header>
  </div>
</div>
`;

exports[`when component is provided a title shows the correct title 1`] = `
<div>
  <div
    class="App"
  >
    <header
      class="App-header"
    >
      <h1>
        hello world
      </h1>
      <img
        alt="logo"
        class="App-logo"
        src="logo.svg"
      />
      <a
        class="App-link"
        href="https://reactjs.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn React
      </a>
    </header>
  </div>
</div>
`;
